# ChangeLog for x11-libs/startup-notification
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/startup-notification/ChangeLog,v 1.47 2005/07/11 22:55:59 geoman Exp $

  11 Jul 2005; Stephen P. Becker <geoman@gentoo.org>
  startup-notification-0.8.ebuild:
  stable on mips

  15 May 2005; Bryan Østergaard <kloeri@gentoo.org>
  startup-notification-0.8.ebuild:
  Stable on alpha.

  11 May 2005; Guy Martin <gmsoft@gentoo.org> startup-notification-0.8.ebuild:
  Stable on hppa.

  08 May 2005; Aron Griffis <agriffis@gentoo.org>
  startup-notification-0.8.ebuild:
  stable on ia64

  08 May 2005; Herbie Hopkins <herbs@gentoo.org>
  startup-notification-0.8.ebuild:
  Stable on amd64.

  29 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  startup-notification-0.8.ebuild:
  Stable on sparc

  25 Apr 2005; Mike Gardiner <obz@gentoo.org>
  startup-notification-0.8.ebuild:
  Keyworded ppc x86

  09 Apr 2005; Markus Rothe <corsair@gentoo.org>
  startup-notification-0.8.ebuild:
  Stable on ppc64

  02 Apr 2005; Stephen P. Becker <geoman@gentoo.org>
  startup-notification-0.7.ebuild:
  stable on mips

*startup-notification-0.8 (03 Feb 2005)

  03 Feb 2005; Joe McCann <joem@gentoo.org>
  +startup-notification-0.8.ebuild:
  Version bump

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  24 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> :
  Stable on alpha.

  23 Dec 2004; Guy Martin <gmsoft@gentoo.org> startup-notification-0.7.ebuild:
  Stable on hppa.

  16 Dec 2004; Dylan Carlson <absinthe@gentoo.org>
  startup-notification-0.7.ebuild:
  Stable on amd64.

  22 Nov 2004; Bryan Østergaard <kloeri@gentoo.org>
  startup-notification-0.7.ebuild:
  Stable on alpha.

  12 Nov 2004; Mike Gardiner <obz@gentoo.org>
  startup-notification-0.7.ebuild:
  Keyworded ppc for GNOME 2.8

  11 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  startup-notification-0.7.ebuild: