@@ -1,4 +1,14 @@
-MD5 4861cdeec6ce517528d8f06f3bfc0853 ChangeLog 4842
-MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 04474b800519bbe91fff5baa7e74f91a startup-notification-0.8.ebuild 654
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 01c88ae7fae2769a249432c6aaa74aa9 ChangeLog 4924
 MD5 f78d0a1f0a150e24879f2979bd6e2059 files/digest-startup-notification-0.8 77
+MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
+MD5 55b7723959fbac91c657c44c2bd43b8d startup-notification-0.8.ebuild 773
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.2 (GNU/Linux)
+
+iD8DBQFDa9+qomPajV0RnrERAliWAJ9BJFpgK9369JepFtWEKQfOF44w5gCfUc3b
+bRODSOK/CRXQXAgLhi85nTc=
+=RHB8
+-----END PGP SIGNATURE-----
