@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/startup-notification/startup-notification-0.8.ebuild,v 1.10 2005/07/11 22:55:59 geoman Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/startup-notification/startup-notification-0.8.ebuild,v 1.11 2005/11/04 22:24:28 dang Exp $
 
 inherit gnome.org
 
@@ -12,7 +12,14 @@ SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 mips ppc ppc64 sparc x86"
 IUSE=""
 
-DEPEND="virtual/x11"
+RDEPEND="||( (
+		x11-libs/libX11
+		x11-libs/libICE
+		x11-libs/libSM )
+	virtual/x11 )"
+
+DEPEND="${RDEPEND}
+	||( x11-proto/xproto virtual/x11)"
 
 src_install() {
 
