@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/startup-notification
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/startup-notification/ChangeLog,v 1.47 2005/07/11 22:55:59 geoman Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/startup-notification/ChangeLog,v 1.48 2005/11/04 22:24:28 dang Exp $
+
+  04 Nov 2005; <dang@gentoo.org> startup-notification-0.8.ebuild:
+  Modular X deps
 
   11 Jul 2005; Stephen P. Becker <geoman@gentoo.org>
   startup-notification-0.8.ebuild:
